Fixed button alignment issue in projects section

--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,31 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
 }
 
 .navbar_logo {
-    margin-left: 10%;
     font-size: 20px;
     font-family: cursive;
     font-weight: bold;
     cursor: pointer;
+}
+
+.navbar_logo_link {
+    padding: 10px;
+    text-decoration: none;
+    margin-left: 10%;
+}
+
+.navbar_logo_link:visited {
+    color: #000;
+}
+
+.navbar_logo_link:hover {
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    margin-left: 10%;
+    transition: color 0.5s ease;
 }
 
 .navbar_list {
@@ -39,23 +55,29 @@ body {
 }
 
 .navbar_list li {
+    padding: 10px;
     cursor: pointer;
-    margin-left: 40px;
+    margin-left: 30px;
 }
 
 .navbar_list li:first-child {
     margin-left: 0;
 }
 
+.navbar_list li:hover {
+    color: #fff;
+    background-color: #000;
+}
+
 .navbar_list a {
     text-decoration: none;
     color: #444;
-    transition: color 0.3s ease;
+    transition: color 2s ease;
 }
 
 .navbar_list li:hover {
-    color: red;
-    transition: color 0.3s ease;
+    color: #fff;
+    transition: color 0.5s ease;
 }
 
 /* SECTION Container and Title */
@@ -86,18 +108,23 @@ body {
 .skills_list {
     list-style: none;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-start;
+    /* Changed to flex-start */
+    align-items: flex-start;
+    /* Changed to flex-start */
     flex-wrap: wrap;
     max-width: 100%;
+    /* Changed to 80% */
 }
 
 .skills_list li {
     background-color: #ffde79;
     padding: 12px 15px;
     border-radius: 10px;
-    width: 150px;
-    margin-top: 10px;
+    /* 3 items per row with 20px spacing */
+    width: calc(20% - 20px);
+    text-align: center;
+    margin: 5px 10px;
 }
 
 /* EXPERIENCE */
@@ -153,12 +180,17 @@ body {
     margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
 
 .card {
-    background-color: #ffde79;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #ccc;
     padding: 10px;
     border-radius: 10px;
+    background-color: beige;
 }
 
 .card_header {
@@ -174,14 +206,16 @@ body {
 
 .card_description {
     margin-bottom: 10px;
+    flex-grow: 1;
 }
 
 .card_modal_button {
     border-radius: 10px;
     padding: 10px;
-    background-color: beige;
+    background-color: #ffde79;
     border: none;
     cursor: pointer;
+    margin: auto;
 }
 
 /* CONTACT */
